--- a/ClientApp/MainWindow.xaml
+++ b/ClientApp/MainWindow.xaml
@@ -35,5 +35,12 @@
                 Command="{Binding IdentificationCommand}">
             Click Here
         </Button>
+        <Button Grid.Column="2" 
+                Grid.Row="2" 
+                FontSize="22"
+                Margin="10,10,10,10"
+                Command="{Binding MoveCommand}">
+            Move
+        </Button>
     </Grid>
 </Window>
